test/classes/initializers/errors/grandFieldUse.good
grandFieldUse.chpl:13: In initializer:
grandFieldUse.chpl:14: error: Parent field "x" used before it is initialized
